--- a/services.html
+++ b/services.html
@@ -1,9 +1,30 @@
-<!DOCTYPE html><html lang='en'><head>
-    <link rel='stylesheet' href='style.css'><meta charset='UTF-8'><title>Services - KMsoution</title></head><body><header><h1>Our Services</h1><nav><a href='index.html'>Home</a> | <a href='about.html'>About</a> | <a href='services.html'>Services</a> | <a href='contact.html'>Contact</a> | <a href='services-ar.html'>العربية</a></nav></header><main>
-<ul>
-    <li>🛠️ Network Design</li>
-    <li>☁️ Cloud Solutions</li>
-    <li>🔒 Cybersecurity</li>
-    <li>💡 Technical Support</li>
-</ul>
-</main></body></html>
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Services - KMsoution</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+<header>
+    <h1>Our Services</h1>
+    <nav>
+        <a href="index.html">Home</a>
+        <a href="about.html">About</a>
+        <a href="services.html">Services</a>
+        <a href="projects.html">Projects</a>
+        <a href="gallery.html">Gallery</a>
+        <a href="contact.html">Contact</a>
+    </nav>
+</header>
+<main>
+    <ul>
+        <li><strong>Network Design:</strong> Structured cabling, rack setup, and infrastructure design.</li>
+        <li><strong>Cybersecurity:</strong> Risk assessment, firewall setup, and data protection.</li>
+        <li><strong>Cloud Solutions:</strong> Migration to AWS, Azure, or private cloud setups.</li>
+        <li><strong>IT Support:</strong> On-site and remote technical assistance.</li>
+    </ul>
+</main>
+</body>
+</html>
