--- a/gallery.html
+++ b/gallery.html
@@ -3,12 +3,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>About Us - KMsoution</title>
+    <title>Gallery - KMsoution</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 <header>
-    <h1>About Us</h1>
+    <h1>Gallery</h1>
     <nav>
         <a href="index.html">Home</a>
         <a href="about.html">About</a>
@@ -19,7 +19,7 @@
     </nav>
 </header>
 <main>
-    <p>KMsoution is an IT consultancy firm dedicated to delivering top-tier technology services, including network design, cybersecurity, cloud migration, and ongoing tech support. Our expert team is passionate about transforming businesses through efficient digital solutions.</p>
+    <p>Gallery of our setups and deployments (images to be added).</p>
 </main>
 </body>
 </html>
