--- a/index.html
+++ b/index.html
@@ -1,2 +1,27 @@
-<!DOCTYPE html><html lang='en'><head>
-    <link rel='stylesheet' href='style.css'><meta charset='UTF-8'><title>KMsoution - Home</title></head><body><header><h1>Welcome to KMsoution</h1><nav><a href='index.html'>Home</a> | <a href='about.html'>About</a> | <a href='services.html'>Services</a> | <a href='contact.html'>Contact</a> | <a href='index-ar.html'>العربية</a></nav></header><main><p>Your trusted IT solutions partner.</p></main></body></html>
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>KMsoution - Home</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <header>
+        <h1>KMsoution</h1>
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="about.html">About</a>
+            <a href="services.html">Services</a>
+            <a href="projects.html">Projects</a>
+            <a href="gallery.html">Gallery</a>
+            <a href="contact.html">Contact</a>
+            <a href="index-ar.html">العربية</a>
+        </nav>
+    </header>
+    <main>
+        <h2>Welcome to KMsoution</h2>
+        <p>Your trusted partner in professional IT solutions.</p>
+    </main>
+</body>
+</html>
